--- a/src/components/Achivments/Achivments.module.css
+++ b/src/components/Achivments/Achivments.module.css
@@ -1,16 +1,102 @@
 .container {
-  width: 80%;
+  position: relative;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+.title {
+  margin-top: calc((1vh + 1vw) * 6);
+  margin-bottom: calc((1vh + 1vw) * 4);
+  position: relative;
+}
+.title h1 {
+  font-family: "arial";
+  font-size: calc((1vh + 1vw) * 4);
+  color: white;
+  margin: 0;
+  z-index: 0;
+}
+.vector {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: calc(1vw * 2);
+  transform: scale(0.7);
 }
 .gridContainer {
-  width: 100%;
+  width: 80%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, calc((1vh + 1vw) * 12));
   gap: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .textCard {
+  position: relative;
   width: 100%;
   background-color: white;
+  padding: calc((1vh + 1vw) * 2) calc((1vh + 1vw) * 2);
+}
+.textCard::after {
+  content: "";
+  position: absolute;
+  right: -23px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 48px;
+  background: white;
+  clip-path: polygon(0 0, 100% 50%, 0 100%);
+}
+.textCard h3 {
+  font-family: "TildaSansBold";
+  font-size: calc((1vh + 1vw) * 0.8);
+}
+.textCard p {
+  font-family: "TildaSansRegular";
+  font-size: calc((1vh + 1vw) * 0.7);
+}
+
+.textCardReverse {
+  position: relative;
+  width: 100%;
+  background-color: white;
+  padding: calc((1vh + 1vw) * 2) calc((1vh + 1vw) * 2);
+}
+.textCardReverse h3 {
+  font-family: "TildaSansBold";
+  font-size: calc((1vh + 1vw) * 0.8);
+}
+.textCardReverse p {
+  font-family: "TildaSansRegular";
+  font-size: calc((1vh + 1vw) * 0.7);
+}
+.textCardReverse::after {
+  content: "";
+  position: absolute;
+  left: -23px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 48px;
+  background: white;
+  clip-path: polygon(100% 0, 0 50%, 100% 100%);
+}
+
+.imgCard {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.imgCard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
