--- a/src/components/MainPage/Hero/Hero.module.css
+++ b/src/components/MainPage/Hero/Hero.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   position: relative;
-  max-width: 80vw;
+  width: 80vw;
   margin-left: auto;
   margin-right: auto;
 }
@@ -14,7 +14,8 @@
   margin-top: 5vh;
 }
 .text {
-  width: 80vw;
+  width: 100%;
+  font-size: calc((1vh + 1vw) * 15);
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -54,16 +55,14 @@
 .button {
   position: relative;
   width: 10vw;
+  height: 10vw;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .circle {
-  width: 100%;
-  height: 100%;
   pointer-events: none;
-  display: block;
   z-index: 0;
 
   animation-name: circle;
@@ -71,7 +70,16 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-
+.play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-60%, 10%);
+  pointer-events: none;
+  width: 30%; /* или нужный размер */
+  height: 30%;
+  z-index: 1;
+}
 @keyframes circle {
   from {
     transform: rotate(0deg);
@@ -79,15 +87,6 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.play {
-  position: absolute;
-  top: 50%;
-  left: 53%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  z-index: 2;
 }
 
 .secondLine h1 {
