--- a/src/components/WhoIsI/FirstColumn/FirstColumn.module.css
+++ b/src/components/WhoIsI/FirstColumn/FirstColumn.module.css
@@ -18,7 +18,7 @@
   z-index: 2;
   top: 3.8vh;
   left: 9vw;
-  scale: 1.2;
+  transform: scale(1.2);
 }
 .card {
   width: 90%;
@@ -32,14 +32,14 @@
   width: 100%;
   height: auto;
   object-fit: contain;
-  z-index: 0;
+  z-index: 2;
 }
 .hover {
   position: absolute;
   width: 100%;
-  z-index: 2;
-  left: 0;
-  bottom: 0;
+  z-index: 5;
+  right: 0;
+  top: 5.5%;
 }
 .subTitle {
   display: flex;
