--- a/src/components/Achivments/Achivments.module.css
+++ b/src/components/Achivments/Achivments.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 20vh;
 }
 .title {
   margin-top: calc((1vh + 1vw) * 6);
@@ -84,9 +85,11 @@
   height: 48px;
   background: white;
   clip-path: polygon(100% 0, 0 50%, 100% 100%);
+  z-index: 10;
 }
 
 .imgCard {
+  position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -94,9 +97,13 @@
   align-items: center;
   justify-content: center;
 }
-.imgCard img {
+.img {
+  position: relative;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  display: block;
+  z-index: 0;
+  transform: scale(1);
 }
