--- a/src/components/Question/Question.module.css
+++ b/src/components/Question/Question.module.css
@@ -4,26 +4,51 @@
 
   position: relative;
   width: 100%;
+  height: 145vh;
   background-color: #9dfc03;
   overflow: hidden;
 }
 .subContainer {
+  position: relative;
   width: 80%;
+}
+.title {
+  position: relative;
 }
 .text {
   position: relative;
   font-family: "arial";
   font-size: calc((1vh + 1vw) * 4);
   line-height: 1;
+  color: black;
+}
+.vector {
+  position: absolute;
+  left: 0;
 }
 .union {
+  position: relative;
   float: right;
   width: 30vw;
   margin-left: 2vw;
   margin-bottom: 2vw;
+  top: 40vh;
 }
 .vector {
   position: absolute;
   top: 0;
   left: 5vw;
+}
+.contacts {
+  display: flex;
+  margin-top: 40vh;
+  gap: 20vw;
+}
+.smile {
+}
+.contactsText {
+  font-family: "arial";
+  font-size: calc((1vh + 1vw) * 4);
+  line-height: 0.9;
+  color: black;
 }
