--- a/src/components/TitleSkills/TitleSkills.module.css
+++ b/src/components/TitleSkills/TitleSkills.module.css
@@ -1,9 +1,10 @@
 .container {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  white-space: nowrap;
+  overflow-x: hidden;
+
   margin: 20vh 0;
 }
 .firstRow {
@@ -13,6 +14,7 @@
   font-size: calc((1vw + 1vh) * 4);
   animation: firstRow 15s linear infinite;
   line-height: 1;
+  white-space: nowrap;
 }
 .italic {
   font-style: italic;
@@ -23,6 +25,7 @@
   font-family: "arial";
   font-size: calc((1vw + 1vh) * 4);
   animation: secondRow 15s linear infinite;
+  white-space: nowrap;
 }
 .dot {
   color: #9dfc03;
